--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
   <link rel="stylesheet" href="src/css/reset.css">
   <link rel="stylesheet" href="src/css/style.css">
-
+  <link rel="stylesheet" href="src/css/responsive.css">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"> <!--font awesome icons-->
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,10 +18,11 @@
 
 </head>
 <body>
-  <main class="container">
     <header class="header">
       <div class="logo">
-        <img src="src/img/logo.svg" alt="Logo">
+        <a href="#">
+          <img src="src/img/logo.svg" alt="Logo">
+        </a>
       </div>
     </header>
 
@@ -34,7 +36,7 @@
       <h1>Build The Community Your Fans Will Love</h1>
       <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
         Create connections with your users as you engage in genuine discussion.</p>
-      <a href="#" class="singup">
+      <a href="#" class="signup">
         <button>Register</button>
       </a>
     </section>
@@ -54,9 +56,8 @@
     <footer class="footer">
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/leozizz">Leozizz</a>.
+        Coded by <a href="https://github.com/leozizz" target="_blank">Leozizz</a>.
       </p>
     </footer>
-  </main>
 </body>
 </html>
