--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
+  <link rel="shortcut icon" href="src/img/favicon-32x32.png" type="image/x-icon">
+
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
 </head>
