--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
         Create connections with your users as you engage in genuine discussion.</p>
       <a href="#" class="signup">
-        <button>Register</button>
+        Register
       </a>
     </section>
   
